compiler/typ/tests/fixtures/diagnostics/0232_adt_record_update_bool_field_10.ml
type rec_kappa = { key : int; ok : bool }
let base_kappa = { key = 9; ok = false }
let _ = { base_kappa with ok = 10 }
